--- a/teste2serial.ipynb
+++ b/teste2serial.ipynb
@@ -93,6 +93,9 @@
     }
    ],
    "source": [
+    "#Feito por: Paulo Galvão",
+    "#Contacto: paulo.galvao@estsetubal.ips.pt",
+    "#Documento feito com base em:",
     "#http://arduino-er.blogspot.com/2015/04/python-to-plot-graph-of-serial-data.html\n",
     "#!/usr/bin/env python3\n",
     "\n",
