--- a/teste2serial.ipynb
+++ b/teste2serial.ipynb
@@ -93,8 +93,8 @@
     }
    ],
    "source": [
-    "#Feito por: Paulo Galvão",
-    "#Contacto: paulo.galvao@estsetubal.ips.pt",
+    "#Feito por: Paulo Galvão\n",
+    "#Contacto: paulo.galvao@estsetubal.ips.pt\n",
     "#Documento feito com base em:",
     "#http://arduino-er.blogspot.com/2015/04/python-to-plot-graph-of-serial-data.html\n",
     "#!/usr/bin/env python3\n",
