--- a/testecolaborgoogle.ipynb
+++ b/testecolaborgoogle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9pajnFtYne6h9aS1M2HxO",
+      "authorship_tag": "ABX9TyOdaz0D/Lj1t1S3DKCIXRry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,6 +62,8 @@
         "*   a é um inteiro \n",
         "*   b é um decimal\n",
         "\n",
+        "## Imprimir Variáveis\n",
+        "\n",
         "\n"
       ]
     },
@@ -70,13 +72,123 @@
       "metadata": {
         "id": "fc30slNhX5Zh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "00c28b68-2b09-4c36-fd6f-bc068839c303"
       },
       "source": [
-        ""
+        "print (a)\n",
+        "print (b)\n",
+        "print (a+b)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1.0\n",
+            "2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WNMXfSfuZlbb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Como vemos a+b dá origem a um decimal.\n",
+        "\n",
+        "#Listas"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z6b13R3bZ4K2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a25c3d49-1795-4d98-cf1d-5468b350585a"
+      },
+      "source": [
+        "temperatura = [0, 3, 4, 5, 7, 6]\n",
+        "print (temperatura[1]) "
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G73tkM7-am-M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5d1f7433-3921-4265-e391-2e1ab50c21c3"
+      },
+      "source": [
+        "max (temperatura)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Bsvxt6ldark",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5bb72c82-fc69-46cd-b8a5-aeb7db346dae"
+      },
+      "source": [
+        "media = sum (temperatura)/len(temperatura)\n",
+        "print (int(media))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
